Bug 330609 - Message movement problems on sequence diagrams
Summary: Message movement problems on sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 139904 158087 (view as bug list)
Depends on:
Blocks: 327050
  Show dependency treegraph
 
Reported: 2014-01-31 11:29 UTC by Ralf Habacker
Modified: 2015-03-08 09:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-01-31 11:29:36 UTC
Moving messages on sequence diagrams gives partial surprising results. 


Reproducible: Sometimes

Steps to Reproduce:
1. start umbrello
2. create a sequence diagram 
3. add some messages
4. try to move message up and down 
Actual Results:  
1. Sometime selecting and moving one message moves an additional message too or only another message
3. Moving messages sometimes let freeze the message position forever

Expected Results:  
1. Only selected messages should be moved together
2. message position should not be freezed
Comment 1 Ralf Habacker 2014-02-04 22:17:27 UTC
Git commit 066eaea0283ba3a3bf77c17e3e68fb2822dacc7a by Ralf Habacker.
Committed on 02/02/2014 at 12:03.
Pushed by habacker into branch 'master'.

Fetch selected items from QGraphicsScene instead of maintaining a local list in UMLScene.

Because QGraphicsScene uses widgets isSelected()/setSelected() method for item selection,
we only support this way.

M  +22   -44   umbrello/umlscene.cpp
M  +0    -2    umbrello/umlscene.h
M  +0    -1    umbrello/widgets/messagewidget.cpp

http://commits.kde.org/umbrello/066eaea0283ba3a3bf77c17e3e68fb2822dacc7a
Comment 2 Ralf Habacker 2014-02-04 22:17:27 UTC
Git commit 677e89ca4886f68ba50df5ea4099d7e00f2075f5 by Ralf Habacker.
Committed on 04/02/2014 at 22:11.
Pushed by habacker into branch 'master'.

In UMLWidget use UMLScene provided widget selection list to avoid outdated selections.

Having outdated selections was the reason for the multiple message widget moving issue.

M  +3    -9    umbrello/widgets/umlwidget.cpp
M  +0    -9    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/677e89ca4886f68ba50df5ea4099d7e00f2075f5
Comment 3 Ralf Habacker 2014-02-04 22:48:31 UTC
Git commit 0c561da31e14f2228dc205303848f6675f78d4f9 by Ralf Habacker.
Committed on 04/02/2014 at 22:41.
Pushed by habacker into branch 'master'.

Remove obsolate debug message.

M  +0    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/0c561da31e14f2228dc205303848f6675f78d4f9
Comment 4 Ralf Habacker 2014-02-06 21:56:54 UTC
Git commit ed517fb31db6b7b582bf541c1b60bf3a591289f3 by Ralf Habacker.
Committed on 03/02/2014 at 09:04.
Pushed by habacker into branch '330788-3.5-cpp-parser'.

Make importfiles callable from main.

M  +5    -0    umbrello/main.cpp
M  +1    -1    umbrello/uml.cpp
M  +1    -2    umbrello/uml.h

http://commits.kde.org/umbrello/ed517fb31db6b7b582bf541c1b60bf3a591289f3
Comment 5 Ralf Habacker 2014-02-14 06:32:25 UTC
There are still more message widget movement problems.
Comment 6 Ralf Habacker 2014-02-14 15:47:53 UTC
Git commit 6f20d1028460ba63301b5abfbd41880dc630f00f by Ralf Habacker.
Committed on 13/02/2014 at 16:07.
Pushed by habacker into branch 'master'.

Fix movement problems in class MessageWidget.

M  +14   -23   umbrello/widgets/messagewidget.cpp
M  +0    -1    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/6f20d1028460ba63301b5abfbd41880dc630f00f
Comment 7 Ralf Habacker 2014-02-14 15:47:53 UTC
Git commit 884b12d4c9bdd2af5b5d93f64162d4bc5e276265 by Ralf Habacker.
Committed on 13/02/2014 at 17:19.
Pushed by habacker into branch 'master'.

Remove obsolate MessageWidget::m_unconstrainedPositionY.

M  +5    -11   umbrello/widgets/messagewidget.cpp
M  +0    -3    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/884b12d4c9bdd2af5b5d93f64162d4bc5e276265
Comment 8 Ralf Habacker 2014-02-14 15:47:54 UTC
Git commit d1e16156eb2a238e2206e2511a8ee86c305800cd by Ralf Habacker.
Committed on 13/02/2014 at 17:20.
Pushed by habacker into branch 'master'.

Merge MessageWidget::moveEvent() into setY().

M  +5    -17   umbrello/widgets/messagewidget.cpp
M  +0    -1    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/d1e16156eb2a238e2206e2511a8ee86c305800cd
Comment 9 Ralf Habacker 2014-02-14 15:47:55 UTC
Git commit 3c05ef3ed875ec72fb2307e3cdc1a1aba0fb8520 by Ralf Habacker.
Committed on 14/02/2014 at 14:29.
Pushed by habacker into branch 'master'.

Fix vertical jump of floating text widget after loading from file.

When moving the text of a sequence diagram message the first time after
loading from file, it jumps temporary vertical above the object widget.

M  +2    -0    umbrello/widgets/floatingtextwidget.cpp

http://commits.kde.org/umbrello/3c05ef3ed875ec72fb2307e3cdc1a1aba0fb8520
Comment 10 Ralf Habacker 2014-03-04 22:26:28 UTC
Git commit 3ca44af7152158b041dae8bdb592ab314fff5d86 by Ralf Habacker.
Committed on 13/02/2014 at 16:07.
Pushed by habacker into branch 'KDE/4.12'.

Fix movement problems in class MessageWidget.
FIXED-IN:4.12.3
(cherry picked from commit 6f20d1028460ba63301b5abfbd41880dc630f00f)

Conflicts:
	umbrello/widgets/messagewidget.h

M  +14   -23   umbrello/widgets/messagewidget.cpp
M  +0    -1    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/3ca44af7152158b041dae8bdb592ab314fff5d86
Comment 11 Ralf Habacker 2014-03-04 22:26:29 UTC
Git commit 051ae2e5653055bc865a761f22fc69d67d2e2a40 by Ralf Habacker.
Committed on 13/02/2014 at 17:19.
Pushed by habacker into branch 'KDE/4.12'.

Remove obsolate MessageWidget::m_unconstrainedPositionY.
(cherry picked from commit 884b12d4c9bdd2af5b5d93f64162d4bc5e276265)

M  +5    -11   umbrello/widgets/messagewidget.cpp
M  +0    -3    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/051ae2e5653055bc865a761f22fc69d67d2e2a40
Comment 12 Ralf Habacker 2014-03-04 22:26:30 UTC
Git commit 11e921bb62cbc863d369fc730710ce054030c679 by Ralf Habacker.
Committed on 13/02/2014 at 17:20.
Pushed by habacker into branch 'KDE/4.12'.

Merge MessageWidget::moveEvent() into setY().
(cherry picked from commit d1e16156eb2a238e2206e2511a8ee86c305800cd)

M  +5    -17   umbrello/widgets/messagewidget.cpp
M  +0    -1    umbrello/widgets/messagewidget.h

http://commits.kde.org/umbrello/11e921bb62cbc863d369fc730710ce054030c679
Comment 13 Ralf Habacker 2014-03-04 22:26:31 UTC
Git commit 24e39daea11e3574da370a5ad8da977e1b33ca4b by Ralf Habacker.
Committed on 14/02/2014 at 14:29.
Pushed by habacker into branch 'KDE/4.12'.

Fix vertical jump of floating text widget after loading from file.

When moving the text of a sequence diagram message the first time after
loading from file, it jumps temporary vertical above the object widget.
(cherry picked from commit 3c05ef3ed875ec72fb2307e3cdc1a1aba0fb8520)

M  +2    -0    umbrello/widgets/floatingtextwidget.cpp

http://commits.kde.org/umbrello/24e39daea11e3574da370a5ad8da977e1b33ca4b
Comment 14 Ralf Habacker 2014-11-20 08:48:34 UTC
Not reproducable  with 4.14.3
Comment 15 Ralf Habacker 2015-03-08 09:33:37 UTC
*** Bug 139904 has been marked as a duplicate of this bug. ***
Comment 16 Ralf Habacker 2015-03-08 09:52:22 UTC
*** Bug 158087 has been marked as a duplicate of this bug. ***