In UMLWidget use UMLScene provided widget selection list to avoid outdated selections.

Having outdated selections was the reason for the multiple message widget moving issue.

BUG:330609